--- a/proposal-talk.tex
+++ b/proposal-talk.tex
@@ -97,11 +97,11 @@ Reuse-Informed Optimization of Planning Effort}
 
 \begin{document}
 
-\input{proposal-talk-intro}
+%\input{proposal-talk-intro}
 
 %\input{proposal-talk-act1}
 
-%\input{proposal-talk-act2}
+\input{proposal-talk-act2}
 
 %\input{proposal-talk-act3}
 
@@ -168,7 +168,7 @@ Reuse-Informed Optimization of Planning Effort}
 \begin{frame}
    \frametitle{Thank you!}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       % top left
       \node[inner sep=0pt] at (3,5.3) {
