--- a/proposal-talk-act2.tex
+++ b/proposal-talk-act2.tex
@@ -1,7 +1,7 @@
 \begin{frame}
    \frametitle{Part 2: Reusing Computation Between Steps}
       \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       % figure adapted from proposal doc
       \begin{scope}[font=\scriptsize,shift={(1.5,6.25)}]
@@ -94,7 +94,7 @@
    \frametitle{Motivation: 2D Example}
    \begin{tikzpicture}
 
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node[inner sep=0] at (5.5,4.75) {
          \includegraphics[width=5cm]{figs/alami-intro.png}
@@ -113,7 +113,7 @@
    \frametitle{Motivation: 2D Example}
    \begin{tikzpicture}
    
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node[inner sep=0] at (5.5,6.75) {
          \includegraphics[width=5cm]{figs/alami-intro.png}
@@ -161,7 +161,7 @@
 \begin{frame}
    \frametitle{Motivation: 2D Example}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node[inner sep=0pt] at (6,7) {\begin{minipage}{11.5cm}\centering
          After every grasp and release,
@@ -190,7 +190,7 @@
 \begin{frame}
    \frametitle{Manipulation Example}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node at (3,6.5) {\includegraphics[width=4.5cm]{build/example-2d-q1}};
       
@@ -232,7 +232,7 @@
 \begin{frame}
    \frametitle{Manipulation Example}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node at (3,6.5) {\includegraphics[width=4.5cm]{build/example-2d-q1}};
       \node at (3,4) {\includegraphics[width=4.5cm]{build/example-2d-b}};
@@ -246,7 +246,7 @@
 \begin{frame}
    \frametitle{Workspace Decompositions to C-Space Relations}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       \node[draw,align=center] at (2,6.75) {Workspace\\obstacle\\$W_X$};
       \draw[->,line width=1pt] (3.25,6.75) -- (4.25,6.75);
@@ -292,7 +292,7 @@
 \begin{frame}
    \frametitle{Manipulation Example}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node[font=\small,anchor=east] at (5.25,6.25) {${\hat p}_{12}(q) = 6$};
       \node at (3,5.25) {\includegraphics[width=4.5cm]{build/example-2d-s12}};
@@ -319,7 +319,7 @@
 \begin{frame}
    \frametitle{Manipulation Example}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       \only<1-2>{\node at (9,3.5) {\includegraphics{build/figstar-wo-abc}};}
       
@@ -373,7 +373,7 @@
 \begin{frame}
    \frametitle{Multi-Set Planning Formulation}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       % right side
       \node[inner sep=0pt] at (9,6.75) {\begin{minipage}{6cm}\centering\small
@@ -415,9 +415,257 @@
 \end{frame}
 
 \begin{frame}
+   \frametitle{Instances of Multi-Set Problems in Manipulation}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[anchor=north,fill=black!15,rounded corners]
+      at (6,7.5) {\begin{minipage}{11.5cm}
+         \begin{itemize}
+         \item Dynamic environments
+         \item Grasped objects
+         \item Workcell decomposition
+         \item Self-collision checking
+         \item Padded robots
+         \item Multi-fidelity geometric models
+         \end{itemize}
+      \end{minipage}};
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Dynamic Environments}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-b.png}}%
+         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
+         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-b.png}}%
+      };
+      
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_A$ in the presence of an object
+         is a subset of the valid set $S_N$ with the object removed.
+      \end{minipage}};
+      
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dyna}}%
+         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dynb}}%
+         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dync}}%
+      };
+      
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Dynamic Environments}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \begin{scope}[shift={(1,1.2)},font=\small]
+         \node[anchor=south west,inner sep=0] at (0,0)
+           {\includegraphics[width=5.2cm]{figs/chimp-voxels-delta.png}};
+
+         \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
+           (debrislab) at (0.7,1.0) {Debris object\\removed};
+         \node[circle,inner sep=2,draw,fill=white] (debris) at (2.2,2.9) {};
+         \draw[draw=black, double=white, double distance=1pt, line width=1pt]
+           (debrislab.north) -- (debris);
+           
+         \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
+           (addlab) at (5.0,2.0) {Additional\\voxels seen};
+         \node[circle,inner sep=2,draw,fill=white] (added) at (4.4,5.0) {};
+         \draw[draw=black, double=white, double distance=1pt, line width=1pt]
+           (addlab.north) -- (added);
+      \end{scope}
+      
+      \node[inner sep=0pt] at (9.5,6) {
+         \includegraphics{build/retroactive-a}
+      };
+      
+      \node[inner sep=0pt] at (9.5,2) {
+         \includegraphics{build/retroactive-b}
+      };
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Grasped Objects}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
+         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
+         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
+      };
+      
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_A$ while grasping an object
+         is a subset of the valid set $S_N$ with the object removed.
+      \end{minipage}};
+      
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dyna}}%
+         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dynb}}%
+         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dync}}%
+      };
+      
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Self-Collision Checking}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
+         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-d.png}}%
+         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
+      };
+
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_A$
+         is a subset of the valid set $S_R$
+         consisting of robot self-collision-free configurations.
+      \end{minipage}};
+
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfa}}%
+         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfb}}%
+         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfc}}%
+      };
+
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Conservative Obstacle Volumes}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-h.png}}%
+         \only<2-3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-e.png}}%
+      };
+      
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_O$ in the presence of an object
+         can be conservatively bounded by a simpler geometry
+         yielding $S_B$.
+      \end{minipage}};
+      
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,outside}}%
+         \only<2->{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,inside}}%
+      };
+      
+      \only<3->{
+         \node[anchor=north,fill=black!15,rounded corners,font=\small]
+         at (8.8,2) {\begin{minipage}{6cm}
+            Extreme case: Leven/Hutchinson workcell decomposition.
+         \end{minipage}};
+      }
+      
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Conservative Grasped Volumes}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
+         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-i.png}}%
+      };
+      
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_O$ while grabbing the object
+         can be conservatively bounded by a simpler geometry
+         yielding $S_B$.
+      \end{minipage}};
+      
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,outside}}%
+         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,inside}}%
+      };
+
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Multi-Set Instances: Conservative Robot Models}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[inner sep=0pt] at (2.8,4) {%
+         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-j.png}}%
+         \only<2->{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-k.png}}%
+      };
+      
+      \node[anchor=north,fill=black!15,rounded corners,font=\small]
+      at (8.8,7.75) {\begin{minipage}{6cm}
+         The valid set $S_R$ while grabbing the object
+         can be conservatively bounded by a simpler geometry
+         yielding $S_B$.
+      \end{minipage}};
+      
+      \node[inner sep=0pt] at (8.8,4) {%
+         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,routside}}%
+         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,rinside}}%
+      };
+   
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Instances of Multi-Set Problems in Manipulation}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      
+      \node[anchor=north,fill=black!15,rounded corners]
+      at (6,7.5) {\begin{minipage}{11.5cm}
+         \begin{itemize}
+         \item Dynamic environments
+         \item Grasped objects
+         \item Workcell decomposition
+         \item Self-collision checking
+         \item Padded robots
+         \item Multi-fidelity geometric models
+         \end{itemize}
+      \end{minipage}};
+      
+      \only<2->{
+         \node[fill=blue!20,rounded corners,anchor=north]
+         at (6,3.5) {\begin{minipage}{9.5cm}
+            {\bf Research Question Q3:}
+            
+            \smallskip
+            Perform a comprehensive literature survey to identify
+            and classify instances of multi-set motion planning.
+            
+            \smallskip
+            Also characterize other approaches to caching and
+            relating similar problems that cannot be represented
+            as a multi-set problem.
+         \end{minipage}};
+      }
+      
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
    \frametitle{Applying the E$^8$-PRM to the Multi-Set Problem}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       \node[fill=blue!20,align=center,rounded corners,
          inner sep=5pt] at (1.5,5.3) {
@@ -482,7 +730,7 @@
 \begin{frame}
    \frametitle{Multi-Set Reasoning with Propositional Logic}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       \node[inner sep=0pt] at (5,6.15) {%
          \only<1>{\includegraphics[width=4.5cm]{build/multiset-roadmap-example,start}}%
@@ -566,373 +814,9 @@
 \end{frame}
 
 \begin{frame}
-   \frametitle{Multi-Set Validitiy Effort Model}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-
-      \node[draw,shape=document,font=\scriptsize] at (6,4) {
-         \begin{minipage}[t]{11cm}%
-            \vspace{0.1cm}
-            Multi-Set Validitiy Effort Model $\mathcal{M}_{\ms{multi}}$
-            \medskip
-            {\algrenewcommand\textproc{}% Used to be \textsc
-            \begin{algorithmic}[1]
-            \Function {$x_{\ms{multi}}$}{$e, S_u$}
-               \State $(\mathcal{F}_{\ms{cert}}, b_{\ms{cert}}, {\hat p}_{\ms{cert}})
-                  \leftarrow \mbox{\sc MultiOptCert}(q_e, S_u,
-                  P_{\ms{global}} \cup e.P_{\ms{eval}})$
-               \ForAll {$S \in \mathcal{F}_{\ms{cert}}$}
-                  \State $b_{\ms{eval}} \leftarrow \mathbf{1}_S[q_e]$
-                  \State $\arraycolsep=2pt
-                     e.P_{\ms{eval}} \leftarrow e.P_{\ms{eval}} \cup
-                     \left\{\begin{array}{rl}
-                     \mathbf{1}_S & \mbox{if } b_{\ms{eval}} \\
-                     \lnot \mathbf{1}_S & \mbox{otherwise} \\
-                     \end{array}
-                     \right\}$
-                  \If {$b_{\ms{eval}} \neq b_{\ms{cert}}(S)$}
-                     \State \Return $\infty$
-                  \EndIf
-               \EndFor
-               \State \Return $0$
-            \EndFunction
-            \medskip
-            \Function {$\hat{x}_{\ms{multi}}$}{$e, S_u$}
-               \State \Return $0$
-            \EndFunction
-            \medskip
-            \Function {$\hat{p}_{\ms{multi}}$}{$e, S_u$}
-               \State $(\mathcal{F}_{\ms{cert}}, b_{\ms{cert}}, {\hat p}_{\ms{cert}})
-                  \leftarrow \mbox{\sc MultiOptCert}(q_e, S_u,
-                  P_{\ms{global}} \cup e.P_{\ms{eval}})$
-               \State \Return ${\hat p}_{\ms{cert}}$
-            \EndFunction
-            \end{algorithmic}
-            } %textproc
-         \end{minipage}%
-      };
-   
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Instances of Multi-Set Problems in Manipulation}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[anchor=north,fill=black!5,rounded corners]
-      at (6,7.5) {\begin{minipage}{11.5cm}
-         \begin{itemize}
-         \item Dynamic environments
-         \item Grasped objects
-         \item Workcell decomposition
-         \item Self-collision checking
-         \item Padded robots
-         \item Multi-fidelity geometric models
-         \end{itemize}
-      \end{minipage}};
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Dynamic Environments}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-b.png}}%
-         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
-         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-b.png}}%
-      };
-      
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_A$ in the presence of an object
-         is a subset of the valid set $S_N$ with the object removed.
-      \end{minipage}};
-      
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dyna}}%
-         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dynb}}%
-         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dync}}%
-      };
-      
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Dynamic Environments}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \begin{scope}[shift={(1,1.2)},font=\small]
-         \node[anchor=south west,inner sep=0] at (0,0)
-           {\includegraphics[width=5.2cm]{figs/chimp-voxels-delta.png}};
-
-         \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
-           (debrislab) at (0.7,1.0) {Debris object\\removed};
-         \node[circle,inner sep=2,draw,fill=white] (debris) at (2.2,2.9) {};
-         \draw[draw=black, double=white, double distance=1pt, line width=1pt]
-           (debrislab.north) -- (debris);
-           
-         \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
-           (addlab) at (5.0,2.0) {Additional\\voxels seen};
-         \node[circle,inner sep=2,draw,fill=white] (added) at (4.4,5.0) {};
-         \draw[draw=black, double=white, double distance=1pt, line width=1pt]
-           (addlab.north) -- (added);
-      \end{scope}
-      
-      \node[inner sep=0pt] at (9.5,6) {
-         \includegraphics{build/retroactive-a}
-      };
-      
-      \node[inner sep=0pt] at (9.5,2) {
-         \includegraphics{build/retroactive-b}
-      };
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Grasped Objects}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
-         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
-         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
-      };
-      
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_A$ while grasping an object
-         is a subset of the valid set $S_N$ with the object removed.
-      \end{minipage}};
-      
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dyna}}%
-         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dynb}}%
-         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,dync}}%
-      };
-      
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Self-Collision Checking}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
-         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-d.png}}%
-         \only<3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-a.png}}%
-      };
-
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_A$
-         is a subset of the valid set $S_R$
-         consisting of robot self-collision-free configurations.
-      \end{minipage}};
-
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfa}}%
-         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfb}}%
-         \only<3>{\includegraphics[width=4.5cm]{build/multiset-manip-instances,selfc}}%
-      };
-
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Conservative Obstacle Volumes}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-h.png}}%
-         \only<2-3>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-e.png}}%
-      };
-      
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_O$ in the presence of an object
-         can be conservatively bounded by a simpler geometry
-         yielding $S_B$.
-      \end{minipage}};
-      
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,outside}}%
-         \only<2->{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,inside}}%
-      };
-      
-      \only<3->{
-         \node[anchor=north,fill=black!10,rounded corners,font=\small]
-         at (8.8,2) {\begin{minipage}{6cm}
-            Extreme case: Leven/Hutchinson workcell decomposition.
-         \end{minipage}};
-      }
-      
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Conservative Obstacle Volumes}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-   
-      \node[draw,color=black!25,inner sep=1pt] (lambda0) at (3,6) {%
-         \only<1>{\includegraphics[width=5cm]{figs/bean-allpaths-lambda0.png}}%
-         \only<2-3>{\includegraphics[width=5cm]{figs/bean-allpaths-padded-lambda0.png}}%
-      };
-      \node[font=\small,below left=0cm of lambda0.north east] {$\lambda = 0$};
-      
-      \node[draw,color=black!25,inner sep=1pt] (lambda1) at (3,2) {%
-         \only<1-2>{\includegraphics[width=5cm]{figs/bean-allpaths-lambda1.png}}%
-         \only<3>{\includegraphics[width=5cm]{figs/bean-allpaths-padded-lambda1.png}}%
-      };
-      \node[font=\small,below left=0cm of lambda1.north east] {$\lambda = 1$};
-      
-      \begin{scope}[shift={(7.5,2.5)},font=\small]
-      \begin{axis}[
-         xlabel=Collision Checks,
-         ylabel=Path Length,
-         ylabel near ticks,
-         xlabel near ticks,
-         scaled x ticks=base 10:-3,
-         scaled y ticks=base 10:-2,
-         every x tick scale label/.style={
-            at={(1,-0.2075)}
-         },
-         %ticks=none,
-         axis lines=left,
-         xmin=0,xmax=8000,
-         ymin=700,ymax=950,
-         width=5.5cm, height=5.5cm]
-      
-      \coordinate (l0) at (axis cs:7219.5, 733.0);
-      \coordinate (l1) at (axis cs:4692.6, 836.5);
-      \coordinate (l0pad) at (axis cs:2685.7, 733.0);
-      \coordinate (l1pad) at (axis cs:1064.5, 907.1);
-
-      \addplot[mark=*] plot coordinates { (7219.5, 733.0) };
-      \addplot[mark=*] plot coordinates { (4692.6, 836.5) };
-
-      \node (labl0) at ($ (l0) + (-10,20) $) {$\lambda=0$};
-      \node (labl1) at ($ (l1) + (70,20) $) {$\lambda=1$};
-      %\draw[->] (labl0) -- ($ (l0)!0.25cm!(labl0) $);
-      %\draw[->] (labl1) -- ($ (l1)!0.25cm!(labl1) $);
-
-      % padded nodes
-      \only<2-3>{
-         \addplot[mark=*] plot coordinates { (2685.7, 733.0) };
-         \draw[->,line width=1pt] ($ (l0)!0.15cm!(l0pad) $) -- ($ (l0pad)!0.15cm!(l0) $);
-      }
-      \only<3>{
-         \addplot[mark=*] plot coordinates { (1064.5, 907.1) };
-         \draw[->,line width=1pt] ($ (l1)!0.15cm!(l1pad) $) -- ($ (l1pad)!0.15cm!(l1) $);
-      }
-      
-      \end{axis}
-      \end{scope}
-   
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Conservative Grasped Volumes}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-c.png}}%
-         \only<2>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-i.png}}%
-      };
-      
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_O$ while grabbing the object
-         can be conservatively bounded by a simpler geometry
-         yielding $S_B$.
-      \end{minipage}};
-      
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,outside}}%
-         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,inside}}%
-      };
-
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Multi-Set Instances: Conservative Robot Models}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[inner sep=0pt] at (2.8,4) {%
-         \only<1>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-j.png}}%
-         \only<2-4>{\includegraphics[height=7.5cm]{figs/herb-fridge-sets-k.png}}%
-      };
-      
-      \node[anchor=north,fill=black!10,rounded corners,font=\small]
-      at (8.8,7.75) {\begin{minipage}{6cm}
-         The valid set $S_R$ while grabbing the object
-         can be conservatively bounded by a simpler geometry
-         yielding $S_B$.
-      \end{minipage}};
-      
-      \node[inner sep=0pt] at (8.8,4) {%
-         \only<1>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,routside}}%
-         \only<2>{\includegraphics[width=4.5cm]{build/multiset-manip-instances-blob,rinside}}%
-         \only<3>{\includegraphics[width=6cm]{build/broadphase-single}}%
-         \only<4>{\includegraphics[width=6cm]{build/broadphase-multi}}%
-      };
-   
-   \end{tikzpicture}
-\end{frame}
-
-\begin{frame}
-   \frametitle{Instances of Multi-Set Problems in Manipulation}
-   \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
-      
-      \node[anchor=north,fill=black!5,rounded corners]
-      at (6,7.5) {\begin{minipage}{11.5cm}
-         \begin{itemize}
-         \item Dynamic environments
-         \item Grasped objects
-         \item Workcell decomposition
-         \item Self-collision checking
-         \item Padded robots
-         \item Multi-fidelity geometric models
-         \end{itemize}
-      \end{minipage}};
-      
-      \only<2->{
-         \node[fill=blue!20,rounded corners,anchor=north]
-         at (6,3.5) {\begin{minipage}{9.5cm}
-            {\bf Research Question Q3:}
-            
-            \smallskip
-            Perform a comprehensive literature survey to identify
-            and classify instances of multi-set motion planning.
-            
-            \smallskip
-            Also characterize other approaches to caching and
-            relating similar problems that cannot be represented
-            as a multi-set problem.
-         \end{minipage}};
-      }
-      
-   \end{tikzpicture}
-\end{frame}
-
-
-\begin{frame}
    \frametitle{Multi-Set PRM Complexity in the Number of Subsets}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       \node[fill=blue!20,rounded corners,font=\scriptsize] at (5,5.6)
       {\begin{minipage}{8cm}
@@ -997,9 +881,72 @@
 \end{frame}
 
 \begin{frame}
+   \frametitle{Multi-Set PRM Behavior: Conservative Volumes}
+   \begin{tikzpicture}
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+   
+      \node[draw,color=black!25,inner sep=1pt] (lambda0) at (3,6) {%
+         \only<1>{\includegraphics[width=5cm]{figs/bean-allpaths-lambda0.png}}%
+         \only<2-3>{\includegraphics[width=5cm]{figs/bean-allpaths-padded-lambda0.png}}%
+      };
+      \node[font=\small,below left=0cm of lambda0.north east] {$\lambda = 0$};
+      
+      \node[draw,color=black!25,inner sep=1pt] (lambda1) at (3,2) {%
+         \only<1-2>{\includegraphics[width=5cm]{figs/bean-allpaths-lambda1.png}}%
+         \only<3>{\includegraphics[width=5cm]{figs/bean-allpaths-padded-lambda1.png}}%
+      };
+      \node[font=\small,below left=0cm of lambda1.north east] {$\lambda = 1$};
+      
+      \begin{scope}[shift={(7.5,2.5)},font=\small]
+      \begin{axis}[
+         xlabel=Collision Checks,
+         ylabel=Path Length,
+         ylabel near ticks,
+         xlabel near ticks,
+         scaled x ticks=base 10:-3,
+         scaled y ticks=base 10:-2,
+         every x tick scale label/.style={
+            at={(1,-0.2075)}
+         },
+         %ticks=none,
+         axis lines=left,
+         xmin=0,xmax=8000,
+         ymin=700,ymax=950,
+         width=5.5cm, height=5.5cm]
+      
+      \coordinate (l0) at (axis cs:7219.5, 733.0);
+      \coordinate (l1) at (axis cs:4692.6, 836.5);
+      \coordinate (l0pad) at (axis cs:2685.7, 733.0);
+      \coordinate (l1pad) at (axis cs:1064.5, 907.1);
+
+      \addplot[mark=*] plot coordinates { (7219.5, 733.0) };
+      \addplot[mark=*] plot coordinates { (4692.6, 836.5) };
+
+      \node (labl0) at ($ (l0) + (-10,20) $) {$\lambda=0$};
+      \node (labl1) at ($ (l1) + (70,20) $) {$\lambda=1$};
+      %\draw[->] (labl0) -- ($ (l0)!0.25cm!(labl0) $);
+      %\draw[->] (labl1) -- ($ (l1)!0.25cm!(labl1) $);
+
+      % padded nodes
+      \only<2-3>{
+         \addplot[mark=*] plot coordinates { (2685.7, 733.0) };
+         \draw[->,line width=1pt] ($ (l0)!0.15cm!(l0pad) $) -- ($ (l0pad)!0.15cm!(l0) $);
+      }
+      \only<3>{
+         \addplot[mark=*] plot coordinates { (1064.5, 907.1) };
+         \draw[->,line width=1pt] ($ (l1)!0.15cm!(l1pad) $) -- ($ (l1pad)!0.15cm!(l1) $);
+      }
+      
+      \end{axis}
+      \end{scope}
+   
+   \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
    \frametitle{HERB Example Problem}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       \node[inner sep=0pt]
          at ( 1.50,6.6) {\includegraphics[width=2cm]{figs/testherb-a.png}};
@@ -1034,7 +981,7 @@
 \begin{frame}
    \frametitle{Part 2: Reusing Computation Between Steps}
    \begin{tikzpicture}
-      \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       % figure adapted from proposal doc
       \begin{scope}[font=\scriptsize,shift={(1.5,6.25)}]
