proposal talk as given!
git-svn-id: svn+ssh://hal.personalrobotics.ri.cmu.edu/old_svn/etc/people/cdellin/docs/fast-manip@33517

--- a/proposal-talk-act1.tex
+++ b/proposal-talk-act1.tex
@@ -397,7 +397,7 @@
       \only<1-2>{
          \node at (6,0.5) {\begin{minipage}{11.5cm}\scriptsize{
             \PaperPortrait\; Bohlin, Kavraki.
-            ``Path planning using lazy PRM,'' ICRA, 2000.
+            ``Path planning using Lazy PRM,'' ICRA, 2000.
          }\end{minipage}};
       }
       
@@ -1486,7 +1486,7 @@
 \end{frame}
 
 \begin{frame}
-   \frametitle{Na\"{\i}ve Implementation}
+   \frametitle{E$^8$ Implementation}
    \begin{tikzpicture}
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
@@ -1657,7 +1657,7 @@
 \end{frame}
 
 \begin{frame}
-   \frametitle{Na\"{\i}ve Implementation}
+   \frametitle{E$^8$ Implementation}
    \begin{tikzpicture}
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
