--- a/proposal-talk-intro.tex
+++ b/proposal-talk-intro.tex
@@ -156,7 +156,7 @@
       \only<1-2>{\includegraphics[width=11.5cm]{figs/herb-fridge-a.png}}%
       \only<3>{\includegraphics[width=11.5cm]{figs/herb-fridge-b.png}}%
       \only<4>{\includegraphics[width=11.5cm]{figs/herb-fridge-c.png}}%
-      \only<5>{\includegraphics[width=11.5cm]{figs/herb-fridge-a.png}}%
+      \only<5>{\includegraphics[width=11.5cm]{figs/herb-fridge-d.png}}%
    };
 
    % figure adapted from proposal doc
