--- a/proposal-talk.tex
+++ b/proposal-talk.tex
@@ -1,6 +1,6 @@
 \documentclass[serif]{beamer}
 
-%\def\gridopacity{100}
+\def\gridopacity{100}
 \def\gridopacity{0}
 
 \usepackage{multimedia}
@@ -97,13 +97,13 @@ Reuse-Informed Optimization of Planning Effort}
 
 \begin{document}
 
-%\input{proposal-talk-intro}
+\input{proposal-talk-intro}
 
-%\input{proposal-talk-act1}
+\input{proposal-talk-act1}
 
 \input{proposal-talk-act2}
 
-%\input{proposal-talk-act3}
+\input{proposal-talk-act3}
 
 \begin{frame}[t]
    \frametitle{Summary of Proposed Work}
@@ -262,6 +262,6 @@ Reuse-Informed Optimization of Planning Effort}
 \end{frame}
 }
 
-%\input{proposal-talk-backup}
+\input{proposal-talk-backup}
 
 \end{document}
