clean up refs, remove unused fast-manip

--- a/proposal.tex
+++ b/proposal.tex
@@ -197,7 +197,7 @@ We also provide open-source implementations of our algorithms.
 %}
 
 \bibliographystyle{abbrv}
-\bibliography{pr-refs}
+\bibliography{references}
 %\doccmddef{bibliography}
 
 \end{document}
