first pass pulling in lazysp content

--- a/references.bib
+++ b/references.bib
@@ -617,6 +617,15 @@
    year = {2012}
 }
 
+=== From citeseer ===
+@article{helmert2006fastdownward,
+   author = {Malte Helmert},
+   title = {The Fast Downward Planning System},
+   journal = {Artificial Intelligence Research},
+   year = {2006},
+   doi = {10.1.1.68.1945}
+}
+
 === From IEEE Xplore ===
 @inproceedings{hsu1997expansive,
    author = {Hsu, D. and Latombe, J.-C. and Motwani, R.},
@@ -802,6 +811,17 @@
    title = {Lifelong Planning {A}*},
    journal = {Artificial Intelligence Journal},
    year = {2004}
+}
+
+=== From citeseer ===
+@article{korf1985idastar,
+   author = {Richard E. Korf},
+   title = {Depth-first Iterative-Deepening: An Optimal Admissible
+      Tree Search},
+   journal = {Artificial Intelligence},
+   year = {1985},
+   volume = {27},
+   pages = {97--109}
 }
 
 === From http://cs.stanford.edu/people/tkr/research/robot-programming ===
@@ -1209,6 +1229,19 @@
 }
 
 === Created manually ===
+@article{pohl1970weightedastar,
+   author = {Ira Pohl},
+   title = {Heuristic search viewed as path finding in a graph},
+   journal = {Artificial Intelligence},
+   volume = {1},
+   number = {3–4},
+   pages = {193 - 204},
+   year = {1970},
+   issn = {0004-3702},
+   doi = {http://dx.doi.org/10.1016/0004-3702(70)90007-X"}
+}
+
+=== Created manually ===
 @inproceedings{quigley2009ros,
    author = {Quigley, M. and Gerkey, B. and Conley K. and Faust, J. and
       Foote, T. and Leibs, J. and Berger, E. and Wheeler, R. and Ng, A. Y.},
@@ -1612,6 +1645,15 @@
    URL = {http://ijr.sagepub.com/content/4/2/3.abstract},
    eprint = {http://ijr.sagepub.com/content/4/2/3.full.pdf+html},
    journal = {The International Journal of Robotics Research}
+}
+
+=== Manual ===
+@inproceedings{yoshizumi2000peastar,
+   author = {Yoshizumi, T and Miura, T and Ishida, T},
+   title = {A* with partial expansion for large branching factor
+      problems},
+   booktitle = {In Proceedings of AAAI},
+   year = {2000}
 }
 
 === Manual ===
